#60 Update dependencies. Spring boot 2.5.2 -> 6.3.1 Hibernate core 5.5.3.Final -> 6.0.0.CR1 h2 -> testRuntimeOnly scope